--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
 main {
   /* align-content: center; */
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   /* display: grid; */
-  font-family: 'SF Pro Text', 'SF Pro Icons', 'Helvetica Neue', 'Helvetica',
+  /* font-family: 'SF Pro Text', 'SF Pro Icons', 'Helvetica Neue', 'Helvetica',
     'Arial', sans-serif;
   hyphens: auto;
   line-height: 1.65;
   margin: 0 auto;
-  padding: 72px 0;
-  text-align: center;
+  padding: 42px 0;
+  text-align: center; */
 }
