--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
-  margin: 0;
-  padding: 0;
+  /* margin: 0;
+  padding: 0; */
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -8,10 +8,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-html, body {
+/* html, body {
   width: 100%;
   height: 100%;
-}
+} */
 
 g.pointtext {
   display: none;
