--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,38 @@
 main {
   /* align-content: center; */
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   /* display: grid; */
   font-family: 'SF Pro Text', 'SF Pro Icons', 'Helvetica Neue', 'Helvetica',
     'Arial', sans-serif;
-  hyphens: auto;
-  line-height: 1.65;
-  margin: 0 auto;
-  padding: 72px 0;
-  text-align: center;
+  /* hyphens: auto; */
+  /* line-height: 1.65; */
+  /* margin: 0 auto; */
+  /* padding: 72px 0; */
+  /* text-align: center; */
 }
+
+/* .app {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(384px, 1fr));
+  grid-gap: 16px;
+}
+*/
+
+.main-plot {
+  /* position: sticky; */
+  /* left: 105%; */
+  border: 2px solid darkgray;
+}
+
+.plot-col {
+  /* position: sticky; */
+  /* left: 105%; */
+  /* border: 5px solid red; */
+} 
+
+.panel-col {
+  /* position: sticky; */
+  /* left: 105%; */
+  border: 2px solid darkgray;
+  background-color: lightgrey;
+} 
