--- a/src/App.css
+++ b/src/App.css
@@ -7,14 +7,24 @@
 }
 
 main {
-  /* align-content: center; */
   box-sizing: border-box;
-  /* display: grid; */
-  /* font-family: 'SF Pro Text', 'SF Pro Icons', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif; */
   font-family: Bender, Arial, serif;
   hyphens: auto;
   line-height: 1.65;
   margin: 0 auto;
   padding: 72px 0;
   text-align: center;
+}
+
+a, a:hover {
+  color: inherit;
+  text-decoration: none;
+}
+
+.release-version {
+  color: #9a8866;
+  position: absolute;
+  bottom: 0;
+  right: 10px;
+  justify-content: end;
 }
