--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   font-display: block;
   font-style: normal;
   font-weight: 400;
-  src: local('Bender Regular'), url("./fonts/Bender.woff2") format("woff2");
+  src: local("Bender Regular"), url("./fonts/Bender.woff2") format("woff2");
 }
 
 main {
@@ -16,7 +16,8 @@ main {
   text-align: center;
 }
 
-a, a:hover {
+a,
+a:hover {
   color: inherit;
   text-decoration: none;
 }
