--- a/src/index.css
+++ b/src/index.css
@@ -3,22 +3,23 @@
   font-display: block;
   font-style: normal;
   font-weight: 400;
-  src: local('Bender Regular'), url("./fonts/Bender.woff2") format("woff2");
+  src: local("Bender Regular"), url("./fonts/Bender.woff2") format("woff2");
 }
 
 body {
   margin: 0;
   padding: 0;
   /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif; */
+"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+sans-serif; */
 
   font-family: "Bender", "sans serif";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-html, body {
+html,
+body {
   width: 100%;
   height: 100%;
 }
