switch to new time-series DB, add text on load

--- a/src/App.css
+++ b/src/App.css
@@ -34,3 +34,12 @@ a:hover {
   bottom: 20px;
   position: absolute;
 }
+
+.spinner {
+  position: absolute;
+}
+
+.spinner-text {
+  position: relative;
+  top: 5%;
+}
